updated usage instructions in jupyter notebook

--- a/Codebase/example.ipynb
+++ b/Codebase/example.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# QMOHI Usage Example\n",
     "This file demonstrates the usage of `driver.py` \n",
-    "with sample input file located at `/QMOMI-input/test_input.csv`\n",
+    "with sample input file located at `/QMOHI-input/test_input.csv`\n",
     "Complete generic pipeline\n",
     "Input - File containing university names, keywords and Google API keys\n",
     "Output - reading level and quantity metric\n",
@@ -16,10 +16,29 @@
     "2. Keywords\n",
     "3. API_keys (Google API keys for custom search)\n",
     "4. Custom search engine unique id\n",
-    "5. Selenium web driver for chrome\n",
-    "6. Output directory for storing results\n",
-    "7. Ideal document name with absolute path\n",
-    "Edit the paths for 5,6 & 7 to point to the necessary files in your machine"
+    "5. Selenium web driver for chrome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "apart-profession",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "from QMOHI_input.preprocess_scripts import override_parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "strategic-principle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv('QMOHI_input/test_input.csv')"
    ]
   },
   {
@@ -45,36 +64,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "apart-profession",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from QMOHI_input.preprocess_scripts import override_parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "strategic-principle",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data = pd.read_csv('QMOHI_input/test_input.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "material-float",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Add custom search engine data\n",
-    "api_keys = ['AIzaSyCAmAgXrFNzS_En7UpGRnolYBnpQbStRgg','AIzaSyAeW9aSUNYM5WPnkXRZh4-K9f20iwroHfY']\n",
-    "cse_id = '00dd60268052357eb'\n",
+    "# api_keys = ['AIzaSyCAmAgXrFNzS_En7UpGRnolYBnpQbStRgg','AIzaSyAeW9aSUNYM5WPnkXRZh4-K9f20iwroHfY']\n",
+    "# cse_id = '00dd60268052357eb'\n",
+    "api_keys = ['your-key1-here','your-key2-here']\n",
+    "cse_id = 'your-cseid-here'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "prostate-baghdad",
+   "metadata": {},
+   "source": [
+    "1. Output directory for storing results\n",
+    "2. Ideal document name with absolute path\n",
+    "3. GoogleNews Word2Vec model from https://code.google.com/archive/p/word2vec/\n",
+    "\n",
+    "Edit the paths to point to the necessary files in your machine as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "concrete-intensity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imported files and directories\n",
     "output_directory = 'QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output' \n",
     "ideal_document = 'QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/pap_smear_fake_document.txt'\n",
     "word_vector_model = 'QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/GoogleNews-vectors-negative300.bin'"
@@ -102,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "associate-directory",
    "metadata": {
     "scrolled": true
@@ -115,7 +136,7 @@
       "[nltk_data] Downloading package gutenberg to\n",
       "[nltk_data]     /Users/rachitjoshi/nltk_data...\n",
       "[nltk_data]   Package gutenberg is already up-to-date!\n",
-      "Start Overall: 16:44:35.174112\n",
+      "Start Overall: 20:14:32.680857\n",
       "\n",
       "============ PHASE 1 =============\n",
       "\n",
@@ -220,15 +241,15 @@
       "-  University of Minnesota Twin Cities\n",
       "   - No web pages found!\n",
       "-  University of Minnesota Crookston\n",
-      "Caught exception for Custom Search engine! <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=+%22pap+smear%22+%7C+%22pap+test%22+%7C+%22papsmear%22+site%3Ahttps%3A%2F%2Fwww.crk.umn.edu%2Funits%2Fhealth-services+&cx=00dd60268052357eb&lr=lang_en&key=AIzaSyCAmAgXrFNzS_En7UpGRnolYBnpQbStRgg&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:877505903172'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:877505903172'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">\n",
+      "   - No web pages found!\n",
       "-  University of Minnesota Duluth\n",
       "-  Winona State University\n",
-      "Caught exception for Custom Search engine! <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=+%22pap+smear%22+%7C+%22pap+test%22+%7C+%22papsmear%22+site%3Ahttps%3A%2F%2Fwww.winona.edu%2Fhealthservices+&cx=00dd60268052357eb&lr=lang_en&key=AIzaSyCAmAgXrFNzS_En7UpGRnolYBnpQbStRgg&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:877505903172'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:877505903172'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">\n",
+      "   - No web pages found!\n",
       "-  University of Mississippi\n",
-      "Caught exception for Custom Search engine! <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=+%22pap+smear%22+%7C+%22pap+test%22+%7C+%22papsmear%22+site%3Ahttps%3A%2F%2Fhealthcenter.olemiss.edu+&cx=00dd60268052357eb&lr=lang_en&key=AIzaSyCAmAgXrFNzS_En7UpGRnolYBnpQbStRgg&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:877505903172'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:877505903172'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">\n",
       "-  University of Southern Mississippi\n",
       "-  Missouri Southern State University\n",
       "-  University of Missouri Columbia\n",
+      "   - No web pages found!\n",
       "-  University of Missouri Kansas City\n",
       "-  Northwest Missouri State University\n",
       "-  Southeast Missouri State University\n",
@@ -247,7 +268,7 @@
       "-  University of New Hampshire Main Campus\n",
       "\n",
       "###### Saving web pages locally in HTML format ######\n",
-      "- Storing web pages at location:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output/Output 2021-12-20 16:44:35/saved_webpages\n",
+      "- Storing web pages at location:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output/Output 2021-12-21 20:14:32/saved_webpages\n",
       "Error in saving one of the web page for  University of Minnesota Duluth\n",
       "https://health-services.d.umn.edu/medical-services/services-provided/sexual-health  :  HTTP Error 403: Forbidden\n",
       "Error in saving one of the web page for  Missouri Southern State University\n",
@@ -269,13 +290,7 @@
       "-  University of Minnesota Duluth\n",
       "-  Winona State University\n",
       "-  University of Mississippi\n",
-      "-  University of Southern Mississippi\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "-  University of Southern Mississippi\n",
       "-  Missouri Southern State University\n",
       "Exception :  <urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:1129)>\n",
       "   - Issues in accessing URL content, trying with Selenium for  https://www.mssu.edu/student-affairs/willcoxon-health-center/frequently-asked-questions.php\n",
@@ -343,7 +358,13 @@
       "    - ''\n",
       "**********************************************************************\n",
       "\n",
-      "-  Michigan State University\n",
+      "-  Michigan State University\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "**********************************************************************\n",
       "  Resource \u001b[93mpunkt\u001b[0m not found.\n",
@@ -493,6 +514,31 @@
       "    - ''\n",
       "**********************************************************************\n",
       "\n",
+      "-  University of Mississippi\n",
+      "\n",
+      "**********************************************************************\n",
+      "  Resource \u001b[93mpunkt\u001b[0m not found.\n",
+      "  Please use the NLTK Downloader to obtain the resource:\n",
+      "\n",
+      "  \u001b[31m>>> import nltk\n",
+      "  >>> nltk.download('punkt')\n",
+      "  \u001b[0m\n",
+      "  For more information see: https://www.nltk.org/data.html\n",
+      "\n",
+      "  Attempted to load \u001b[93mtokenizers/punkt/PY3/english.pickle\u001b[0m\n",
+      "\n",
+      "  Searched in:\n",
+      "    - '/Users/rachitjoshi/nltk_data'\n",
+      "    - '/usr/local/opt/python@3.9/Frameworks/Python.framework/Versions/3.9/nltk_data'\n",
+      "    - '/usr/local/opt/python@3.9/Frameworks/Python.framework/Versions/3.9/share/nltk_data'\n",
+      "    - '/usr/local/opt/python@3.9/Frameworks/Python.framework/Versions/3.9/lib/nltk_data'\n",
+      "    - '/usr/share/nltk_data'\n",
+      "    - '/usr/local/share/nltk_data'\n",
+      "    - '/usr/lib/nltk_data'\n",
+      "    - '/usr/local/lib/nltk_data'\n",
+      "    - ''\n",
+      "**********************************************************************\n",
+      "\n",
       "-  University of Southern Mississippi\n",
       "\n",
       "**********************************************************************\n",
@@ -543,7 +589,6 @@
       "    - ''\n",
       "**********************************************************************\n",
       "\n",
-      "-  University of Missouri Columbia\n",
       "-  University of Missouri Kansas City\n",
       "\n",
       "**********************************************************************\n",
@@ -715,8 +760,8 @@
       "Loaded\n",
       "\n",
       "###### Consolidating all metric values together ######\n",
-      "- All results (intermediate and final) have been stored at location:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output/Output 2021-12-20 16:44:35\n",
-      "End Overall: 16:49:47.203579\n",
+      "- All results (intermediate and final) have been stored at location:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output/Output 2021-12-21 20:14:32\n",
+      "End Overall: 20:18:56.152318\n",
       "\n",
       "============ FINISHED =============\n",
       "\n"
@@ -726,134 +771,6 @@
    "source": [
     "# Run driver code\n",
     "! python3 driver.py QMOHI_input/test_input.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "muslim-least",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package gutenberg to\n",
-      "[nltk_data]     /Users/rachitjoshi/nltk_data...\n",
-      "[nltk_data]   Package gutenberg is already up-to-date!\n",
-      "Start Overall: 16:16:52.337247\n",
-      "\n",
-      "============ PHASE 1 =============\n",
-      "\n",
-      "###### Reading input file ######\n",
-      "- Input file given by user:  QMOMI_input/test_input.csv\n",
-      "- Setting up output directory: - Collecting input university names\n",
-      "                            University_name\n",
-      "0                   Ferris State University\n",
-      "1             Grand Valley State University\n",
-      "2          University of Michigan Ann Arbor\n",
-      "3                 Michigan State University\n",
-      "4                        Oakland University\n",
-      "5                    Wayne State University\n",
-      "6               Western Michigan University\n",
-      "7                  Bemidji State University\n",
-      "8        Minnesota State University Mankato\n",
-      "9             Metropolitan State University\n",
-      "10      University of Minnesota Twin Cities\n",
-      "11        University of Minnesota Crookston\n",
-      "12           University of Minnesota Duluth\n",
-      "13                  Winona State University\n",
-      "14                University of Mississippi\n",
-      "15       University of Southern Mississippi\n",
-      "16       Missouri Southern State University\n",
-      "17          University of Missouri Columbia\n",
-      "18       University of Missouri Kansas City\n",
-      "19      Northwest Missouri State University\n",
-      "20      Southeast Missouri State University\n",
-      "21    Missouri State University Springfield\n",
-      "22          University of Nebraska at Omaha\n",
-      "23           University of Nebraska Lincoln\n",
-      "24                       Peru State College\n",
-      "25                      Wayne State College\n",
-      "26           University of Nevada Las Vegas\n",
-      "27                University of Nevada Reno\n",
-      "28  University of New Hampshire Main Campus \n",
-      "\n",
-      "- Collecting input keywords\n",
-      "/Users/rachitjoshi/QMOMI_tool/Codebase/qmohi/src/input_parser/parse_input.py:80: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  keywords = keywords.apply(lambda x:x.str.replace(' +', ' '))\n",
-      "    Keywords\n",
-      "0  pap smear\n",
-      "1   pap test\n",
-      "2   papsmear \n",
-      "\n",
-      "- Collecting input API keys\n",
-      "0    AIzaSyCAmAgXrFNzS_En7UpGRnolYBnpQbStRgg\n",
-      "1    AIzaSyAeW9aSUNYM5WPnkXRZh4-K9f20iwroHfY\n",
-      "Name: API_keys, dtype: object\n",
-      "\n",
-      "- Collecting input Selenium Web Driver:  /usr/local/bin/chromedriver\n",
-      "- Collecting input CSE id:  00dd60268052357eb\n",
-      "- Collecting ideal document name:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOMI_input/experiments/2021/QMOMI_input_11thOct2021/pap_smear_fake_document.txt\n",
-      "- Collecting input model\n",
-      "###### Finding university SHC websites ######\n",
-      "-  Ferris State University\n",
-      "-  Grand Valley State University\n",
-      "-  University of Michigan Ann Arbor\n",
-      "^C\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/rachitjoshi/QMOMI_tool/Codebase/qmohi/src/input_parser/get_uni_shc.py\", line 43, in get_redirected_url\n",
-      "    driver.get(url)\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py\", line 333, in get\n",
-      "    self.execute(Command.GET, {'url': url})\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py\", line 319, in execute\n",
-      "    response = self.command_executor.execute(driver_command, params)\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/selenium/webdriver/remote/remote_connection.py\", line 374, in execute\n",
-      "    return self._request(command_info[0], url, body=data)\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/selenium/webdriver/remote/remote_connection.py\", line 397, in _request\n",
-      "    resp = self._conn.request(method, url, body=body, headers=headers)\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/urllib3/request.py\", line 78, in request\n",
-      "    return self.request_encode_body(\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/urllib3/request.py\", line 170, in request_encode_body\n",
-      "    return self.urlopen(method, url, **extra_kw)\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/urllib3/poolmanager.py\", line 375, in urlopen\n",
-      "    response = conn.urlopen(method, u.request_uri, **kw)\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 699, in urlopen\n",
-      "    httplib_response = self._make_request(\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 445, in _make_request\n",
-      "    six.raise_from(e, None)\n",
-      "  File \"<string>\", line 3, in raise_from\n",
-      "  File \"/usr/local/lib/python3.9/site-packages/urllib3/connectionpool.py\", line 440, in _make_request\n",
-      "    httplib_response = conn.getresponse()\n",
-      "  File \"/usr/local/Cellar/python@3.9/3.9.7/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 1371, in getresponse\n",
-      "    response.begin()\n",
-      "  File \"/usr/local/Cellar/python@3.9/3.9.7/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 319, in begin\n",
-      "    version, status, reason = self._read_status()\n",
-      "  File \"/usr/local/Cellar/python@3.9/3.9.7/Frameworks/Python.framework/Versions/3.9/lib/python3.9/http/client.py\", line 280, in _read_status\n",
-      "    line = str(self.fp.readline(_MAXLINE + 1), \"iso-8859-1\")\n",
-      "  File \"/usr/local/Cellar/python@3.9/3.9.7/Frameworks/Python.framework/Versions/3.9/lib/python3.9/socket.py\", line 704, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/rachitjoshi/QMOMI_tool/Codebase/driver.py\", line 132, in <module>\n",
-      "    execute(sys.argv[1])\n",
-      "  File \"/Users/rachitjoshi/QMOMI_tool/Codebase/driver.py\", line 82, in execute\n",
-      "    result_dataframe3 = get_uni_shc.get_shc_urls_from_uni_name(universities_list, keys_list[:no_of_keys_for_shc],\n",
-      "  File \"/Users/rachitjoshi/QMOMI_tool/Codebase/qmohi/src/input_parser/get_uni_shc.py\", line 145, in get_shc_urls_from_uni_name\n",
-      "    redirected_url = get_redirected_url(url, driver_path)\n",
-      "  File \"/Users/rachitjoshi/QMOMI_tool/Codebase/qmohi/src/input_parser/get_uni_shc.py\", line 51, in get_redirected_url\n",
-      "    except exceptions as e:\n",
-      "TypeError: catching classes that do not inherit from BaseException is not allowed\n"
-     ]
-    }
-   ],
-   "source": [
-    "! python3 driver.py QMOMI_input/test_input.csv"
    ]
   },
   {
