Renaming Jupyter notebook (may have broken things in the notebook, will worry about that later)

--- a/src/quickstart-qmohi.ipynb
+++ b/src/quickstart-qmohi.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "from QMOHI_input.preprocess_scripts import override_parameters"
+    "from qmohi.jupyter.preprocess_scripts import override_parameters"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv('QMOHI_input/test_input.csv')"
+    "test_data = pd.read_csv('../experiments/2021/10-11.pap-smear/test_input.csv')"
    ]
   },
   {
@@ -96,9 +96,9 @@
    "outputs": [],
    "source": [
     "#imported files and directories\n",
-    "output_directory = 'QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output' \n",
-    "ideal_document = 'QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/pap_smear_fake_document.txt'\n",
-    "word_vector_model = 'QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/GoogleNews-vectors-negative300.bin'"
+    "output_directory = '../experiments/2021/10-11.pap-smear/output' \n",
+    "ideal_document = '../experiments/2021/10-11.pap-smear/pap_smear_fake_document.txt'\n",
+    "word_vector_model = '../experiments/2021/10-11.pap-smear/GoogleNews-vectors-negative300.bin'"
    ]
   },
   {
@@ -141,7 +141,7 @@
       "============ PHASE 1 =============\n",
       "\n",
       "###### Reading input file ######\n",
-      "- Input file given by user:  QMOHI_input/test_input.csv\n",
+      "- Input file given by user:  ../experiments/2021/10-11.pap-smear/test_input.csv\n",
       "- Setting up output directory: - Collecting input university names\n",
       "                            University_name\n",
       "0                   Ferris State University\n",
@@ -189,7 +189,7 @@
       "\n",
       "- Collecting input Selenium Web Driver:  /usr/local/bin/chromedriver\n",
       "- Collecting input CSE id:  00dd60268052357eb\n",
-      "- Collecting ideal document name:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/pap_smear_fake_document.txt\n",
+      "- Collecting ideal document name:  ../experiments/2021/10-11.pap-smear/pap_smear_fake_document.txt\n",
       "- Collecting input model\n",
       "###### Finding university SHC websites ######\n",
       "-  Ferris State University\n",
@@ -268,7 +268,7 @@
       "-  University of New Hampshire Main Campus\n",
       "\n",
       "###### Saving web pages locally in HTML format ######\n",
-      "- Storing web pages at location:  /Users/rachitjoshi/QMOMI_tool/Codebase/QMOHI_input/experiments/2021/QMOHI_input_11thOct2021/output/Output 2021-12-21 20:14:32/saved_webpages\n",
+      "- Storing web pages at location:  ../experiments/2021/10-11.pap-smear/output/Output 2021-12-21 20:14:32/saved_webpages\n",
       "Error in saving one of the web page for  University of Minnesota Duluth\n",
       "https://health-services.d.umn.edu/medical-services/services-provided/sexual-health  :  HTTP Error 403: Forbidden\n",
       "Error in saving one of the web page for  Missouri Southern State University\n",
